[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Angelo Delicato <thelicato@duck.com>"]
readme = "README.md"
include = [{ path = "bobb/ui/**/*", format = ["sdist", "wheel"] }]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-session = "^0.5.0"
flask-login = "^0.6.3"
python-dotenv = "^1.0.0"
peewee = "^3.17.0"
flask-bcrypt = "^1.0.1"
jsonschema = "^4.19.2"
pylibmc = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bobb = 'server:main'
